Intrégrer descriptions de films dans les affiches

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </ul>
         </nav>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-instagram-square"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+            <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
+            <a href="#" title="Twitter"><i class="fab fa-twitter-square"></i></a>
         </div>
     </header>
 
@@ -52,8 +52,8 @@
         <section id="films">
             <section>
                 <h2>Jeudi 5 Août</h2>
-                <div class="poster">
-                    <article>
+                <div class="posters">
+                    <article class="poster">
                         <img src="./affiches/drive.jpg" alt="Drive affiche">
                         <article class="card">
                             <h3>Drive</h3>
@@ -64,18 +64,6 @@
                                 Ultra professionnel et peu bavard, il a son propre code de conduite. 
                                 Jamais il n’a pris part aux crimes de ses employeurs autrement qu’en 
                                 conduisant - et au volant, il est le meilleur !
-                                Shannon, le manager qui lui décroche tous ses contrats, propose à 
-                                Bernie Rose, un malfrat notoire, d’investir dans un véhicule pour que 
-                                son poulain puisse affronter les circuits de stock-car professionnels. 
-                                Celui-ci accepte mais impose son associé, Nino, dans le projet.
-                                C’est alors que la route du pilote croise celle d’Irene et de son jeune 
-                                fils. Pour la première fois de sa vie, il n’est plus seul.
-                                Lorsque le mari d’Irene sort de prison et se retrouve enrôlé de force 
-                                dans un braquage pour s’acquitter d’une dette, il décide pourtant de 
-                                lui venir en aide. L’expédition tourne mal…
-                                Doublé par ses commanditaires, et obsédé par les risques qui pèsent 
-                                sur Irene, il n’a dès lors pas d’autre alternative que de les traquer 
-                                un à un…
                             </p>
                             <ul>
                                 <li>Date de sortie : 5 Octobre 2011</li>
@@ -89,8 +77,8 @@
                             <a href="#reservation" class="button">Préinscription</a>
                         </article>
                     </article>
-                    <article>
-                        <article class="card">
+                    <article class="poster">
+                        <article class="card card_moonlight">
                             <h3>Moonlight</h3>
                             <h4>Synopsis</h4>
                             <p>
@@ -116,10 +104,10 @@
 
             <section>
                 <h2>Vendredi 6 Août</h2>
-                <div class="poster">
-                    <article>
+                <div class="posters">
+                    <article class="poster">
                         <img src="./affiches/gone_girl.jpg" alt="Gone girl affiche">
-                        <article class="card">
+                        <article class="card card_girl">
                             <h3>Gone Girl</h3>
                             <h4>Synopsis</h4>
                             <p>
@@ -140,8 +128,8 @@
                             <a href="#reservation" class="button">Préinscription</a>
                         </article>
                     </article>
-                    <article>
-                        <article class="card">
+                    <article class="poster">
+                        <article class="card card_haine">
                             <h3>La Haine</h3>
                             <h4>Synopsis</h4>
                             <p>
@@ -169,10 +157,10 @@
 
             <section>
                 <h2>Samedi 7 Août</h2>
-                <div class="poster">
-                    <article>
+                <div class="posters">
+                    <article class="poster">
                         <img src="./affiches/her.jpg" alt="Her affiche">
-                        <article class="card">
+                        <article class="card card_her">
                             <h3>Her</h3>
                             <h4>Synopsis</h4>
                             <p>
@@ -195,8 +183,8 @@
                             <a href="#reservation" class="button">Préinscription</a>
                         </article>
                     </article>
-                    <article>
-                        <article class="card">
+                    <article class="poster">
+                        <article class="card card_imitation">
                             <h3>Imitation Game</h3>
                             <h4>Synopsis</h4>
                             <p>
@@ -222,10 +210,10 @@
 
             <section>
                 <h2>Dimanche 8 Août</h2>
-                <div class="poster">
-                    <article>
+                <div class="posters">
+                    <article class="poster">
                         <img src="./affiches/lobster.jpg" alt="The Lobster affiche">
-                        <article class="card">
+                        <article class="card card_lobster">
                             <h3>The Lobster</h3>
                             <h4>Synopsis</h4>
                             <p>
@@ -247,8 +235,8 @@
                             <a href="#reservation" class="button">Préinscription</a>
                         </article>
                     </article>
-                    <article>
-                        <article class="card">
+                    <article class="poster">
+                        <article class="card card_melancholia">
                             <h3>Melancholia</h3>
                             <h4>Synopsis</h4>
                             <p>
