Create button for small screens

--- a/legal.html
+++ b/legal.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Vibur&display=swap" rel="stylesheet">
     
-        <link rel="icon" type="image/png" href="logo.png">
+        <link rel="icon" type="image/png" href="logo_rose.png">
         <link rel="stylesheet" href="style.css">
     
         <title>Mentions légales - Les Films de Plein Air</title>
@@ -23,8 +23,9 @@
                 <p>Les Films de Plein Air</p>
             </a>
         </div>
-        <nav>
-            <ul>
+        <nav class="dropdown">
+            <button class="dropdown_button"><i class="fas fa-bars"></i></button>
+            <ul class="dropdown_content">
                 <li><a href="index.html#films">Liste de films</a></li>
                 <li><a href="index.html#reservation">Préinscription</a></li>
                 <li><a href="index.html#newsletter">Newsletter</a></li>
@@ -32,9 +33,9 @@
             </ul>
         </nav>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-instagram-square"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+            <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
+            <a href="#" title="Twitter"><i class="fab fa-twitter-square"></i></a>
         </div>
     </header>
 
