--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
             </ul>
         </nav>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
-            <a href="#"><i class="fab fa-instagram-square"></i></a>
-            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+            <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
+            <a href="#" title="Twitter"><i class="fab fa-twitter-square"></i></a>
         </div>
     </header>
 
