--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Vibur&display=swap" rel="stylesheet">
     
-        <link rel="icon" type="image/png" href="logo.png">
+        <link rel="icon" type="image/png" href="logo_rose.png">
         <link rel="stylesheet" href="style.css">
     
         <title>Contactez-nous - Les Films de Plein Air</title>
@@ -23,8 +23,9 @@
                 <p>Les Films de Plein Air</p>
             </a>
         </div>
-        <nav>
-            <ul>
+        <nav class="dropdown">
+            <button class="dropdown_button"><i class="fas fa-bars"></i></button>
+            <ul class="dropdown_content">
                 <li><a href="index.html#films">Liste de films</a></li>
                 <li><a href="index.html#reservation">Préinscription</a></li>
                 <li><a href="index.html#newsletter">Newsletter</a></li>
