Reponsive done for film cards + forms

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="posters">
                     <article class="poster">
                         <img src="./affiches/drive.jpg" alt="Drive affiche">
-                        <article class="card">
+                        <article class="card card_driver">
                             <h3>Drive</h3>
                             <h4>Synopsis</h4>
                             <p>
