--- a/contact.html
+++ b/contact.html
@@ -70,20 +70,22 @@
                 </form>
 
                 <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.8735531366574!2d2.3067663159035074!3d48.87968700716066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fbe98f714c3%3A0xe62425fddeddc402!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1603034710370!5m2!1sfr!2sfr" width="800" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2623.8735531366574!2d2.3067663159035074!3d48.87968700716066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fbe98f714c3%3A0xe62425fddeddc402!2sParc%20Monceau!5e0!3m2!1sfr!2sfr!4v1603034710370!5m2!1sfr!2sfr" width="800" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     <div class="phone">
                         <i class="fas fa-phone-square-alt"></i>
                         <p>01 00 01 02 03</p>
                     </div>
                 </div>
             </div>
-            
-
-            
         </section>
     </main>
     <footer>
         <p><a href="legal.html">Mentions légales</a></p>
+        <p class="footer__social">
+            <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+            <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
+            <a href="#" title="Twitter"><i class="fab fa-twitter-square"></i></a>
+        </p>
     </footer>
 </body>
 </html>
