--- a/legal.html
+++ b/legal.html
@@ -213,5 +213,13 @@
             </p>
         </section>
     </main>
+    <footer>
+        <p><a href="legal.html">Mentions légales</a></p>
+        <p class="footer__social">
+            <a href="#" title="Facebook"><i class="fab fa-facebook-square"></i></a>
+            <a href="#" title="Instagram"><i class="fab fa-instagram-square"></i></a>
+            <a href="#" title="Twitter"><i class="fab fa-twitter-square"></i></a>
+        </p>
+    </footer>
 </body>
 </html>
